[project]
name = "mcp-toolhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.2.1",
]

[project.scripts]
mcp-toolhouse = "mcp_toolhouse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
